--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <title>Resume</title>
+  <meta name="google-site-verification" content="ThbVqDwgKeo8YMBU5Jdyybcr7hETLqHchidwsovVAb8" />
+  <title>simon makau</title>
   
   <link rel="stylesheet" href="style.css">
 </head>
