--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="ThbVqDwgKeo8YMBU5Jdyybcr7hETLqHchidwsovVAb8" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2734171943511526" crossorigin="anonymous"></script>
   <title>simon makau</title>
   
   <link rel="stylesheet" href="style.css">
