--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <title>simon makau</title>
   
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="images/me3.jpg" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="images/favicon.png">
 </head>
 
 <body>
