--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <section id="home">
     <div>
       <h3>Hi! there am simon,</h3>
-      <img src="images/me3.jpg" alt="img">
+      <img src="images/img2.jpg" alt="img">
     </div>
   </section>
   
@@ -120,7 +120,8 @@
     </form>
   </section>
   
-  
+  <img src="images/img1.jpg" alt="" style="display: none;">
+  <img src="images/img3.jpg" alt="" style="display: none;">
   <footer>
     <p>&copy;Made by simon makau 2025</p>
   </footer>
