--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
   </section>
   <section id="contact">
     <h3>Contact me</h3>
-    <form>
+    <form action="https://formspree.io/f/movvwylo" method="POST">
       
       <div>
         <label for="">Name</label>
-        <input type="text" placeholder="Enter your name here..." required />
+        <input type="text" placeholder="Enter your name here..." required name="User Name"/>
       </div>
       <div>
         <label for="">Email</label>
-        <input type="email" placeholder="Enter your email here ..." required />
+        <input type="email" placeholder="Enter your email here ..." required name="Email"/>
       </div>
       <div>
         <label for="">Message</label>
-        <input type="text" placeholder="Enter message here ..." required id="msg" />
+        <input type="text" placeholder="Enter message here ..." required id="msg" name="Message" />
       </div>
       <button type="submit">Submit</button>
     </form>
